--- a/Day-15-of-100/app/build.gradle
+++ b/Day-15-of-100/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    android.defaultConfig.vectorDrawables.useSupportLibrary = true
 }
 
 dependencies {
